CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(EscapeBox)

#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe -std=c99")
SET(CMAKE_BUILD_TYPE Debug)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../Cmake)

INCLUDE(arduino_mega2560)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe -std=c99 -O2 -Wunused")
FILE(GLOB HEADERS "${PROJECT_SOURCE_DIR}/include/*.h")

ADD_SUBDIRECTORY(src)


INCLUDE(doxy)